@@ -5,7 +5,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -82,7 +81,7 @@ public class ListingCommandServiceImpl implements ListingCommandService {
             // Получаем ID для batch удаления
             List<Long> snapshotIds = snapshots.stream()
                     .map(StatSnapshot::getId)
-                    .collect(Collectors.toList());
+                    .toList();
             
             statsRepository.deleteAllByIdInBatch(snapshotIds);
         } else {
